--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 <script>
   // 1. Veriyi JSON dosyasından çek
-  fetch('afrika-verileri.json')
+  fetch('trdata.json')
     .then(response => response.json())
     .then(data => {
       const countries = data.countries;
