--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #map-area {
       flex: 1;
       position: relative;
-      background: #1a1a1a;
+      background: #f0f0f0;
       overflow: hidden;
       cursor: default;
       z-index: 1;
