--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>MİLİTAN ATLASI - V5 (Dark & Advanced)</title>
+  <title>MİLİTAN ATLASI </title>
   <style>
     /* ─── TEMEL AYARLAR (DARK THEME - ORİJİNAL) ─── */
     * { box-sizing: border-box; margin: 0; padding: 0; outline: none; }
@@ -54,7 +54,7 @@
     /* ─── TOOLTIP ─── */
     .tooltip {
       position: absolute;
-      background: rgba(0,0,0,0.95); /* Biraz daha koyu */
+      background: rgba(0,0,0,0.95);
       color: white;
       padding: 12px 16px;
       border-radius: 8px;
@@ -63,8 +63,8 @@
       z-index: 1000;
       display: none;
       border: 1px solid rgba(255,255,255,0.2);
-      white-space: normal; /* Alt satıra geçebilsin */
-      max-width: 250px; /* Çok genişlemesin */
+      white-space: normal;
+      max-width: 250px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.5);
     }
     .tooltip.visible { display: block; }
@@ -167,7 +167,8 @@
     }
     .result-item:hover { background: #333; border-color: #555; transform: translateX(3px); }
     .result-info div { font-size: 14px; font-weight: bold; color: #eee; }
-    .result-info span { font-size: 12px; color: #aaa; }
+    /* İSTEK ÜZERİNE ALT BİLGİ GİZLENDİ */
+    .result-info span { display: none; } 
 
     /* ─── MODALLAR ─── */
     .modal {
@@ -256,7 +257,7 @@
 
   <div id="map-area">
     <svg id="svg-map" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid meet">
-       <path id="AO" data-name="Angola" data-id="AO" d="m 495.3,598.6 -36,-0.2 -4.3,1.7 -3.5,-0.3 -5.1,1.9 -1.1,2.7 6,8.7 2.4,9.3 3.6,13.4 -3.8,5.5 -0.6,2.8 2.9,8.3 3.1,8.4 3.6,5 0.6,7.8 -1.4,10.3 -4,6.1 -7.1,9.1 -2.9,5.6 -4.1,12.5 -0.8,5.9 -4.3,12.7 -1.9,12.2 1,8.7 5.9,-2.7 7.2,-2.3 7.8,0.4 7.1,6.3 1.9,-1 48.8,-0.6 8.2,6.6 29.1,2 22.4,-5.7 -7.6,-8.6 -7.8,-11.3 1.6,-44 25.3,0.1 -1,-4.7 2,-5.2 -2,-6.5 1.5,-6.7 -1.2,-4.3 -5.5,-0.8 -7.6,2 -5.3,-0.3 -3,1.3 0.9,-16.5 -3.9,-5.1 -0.8,-8.5 1.9,-8.4 -2.4,-5.3 -0.1,-8.7 -14.8,0.1 1.1,-5 -6.2,0.1 -0.7,2.4 -7.6,0.5 -3.1,8.1 -1.9,3.4 -6.7,-1.9 -4,1.9 -8.1,1.1 -4.6,-7.2 -2.7,-4.5 -3.5,-8.3 -2.9,-10.3 z m -47.4,-2.7 0.4,-6 2,-3.5 4.5,-2.9 -4.6,-4.8 -3.7,2.3 -5,6 3.3,10.4 3.1,-1.5 z" />
+        <path id="AO" data-name="Angola" data-id="AO" d="m 495.3,598.6 -36,-0.2 -4.3,1.7 -3.5,-0.3 -5.1,1.9 -1.1,2.7 6,8.7 2.4,9.3 3.6,13.4 -3.8,5.5 -0.6,2.8 2.9,8.3 3.1,8.4 3.6,5 0.6,7.8 -1.4,10.3 -4,6.1 -7.1,9.1 -2.9,5.6 -4.1,12.5 -0.8,5.9 -4.3,12.7 -1.9,12.2 1,8.7 5.9,-2.7 7.2,-2.3 7.8,0.4 7.1,6.3 1.9,-1 48.8,-0.6 8.2,6.6 29.1,2 22.4,-5.7 -7.6,-8.6 -7.8,-11.3 1.6,-44 25.3,0.1 -1,-4.7 2,-5.2 -2,-6.5 1.5,-6.7 -1.2,-4.3 -5.5,-0.8 -7.6,2 -5.3,-0.3 -3,1.3 0.9,-16.5 -3.9,-5.1 -0.8,-8.5 1.9,-8.4 -2.4,-5.3 -0.1,-8.7 -14.8,0.1 1.1,-5 -6.2,0.1 -0.7,2.4 -7.6,0.5 -3.1,8.1 -1.9,3.4 -6.7,-1.9 -4,1.9 -8.1,1.1 -4.6,-7.2 -2.7,-4.5 -3.5,-8.3 -2.9,-10.3 z m -47.4,-2.7 0.4,-6 2,-3.5 4.5,-2.9 -4.6,-4.8 -3.7,2.3 -5,6 3.3,10.4 3.1,-1.5 z" />
       <path id="BI" data-name="Burundi" data-id="BI" d="m 669,556.1 -0.6,-5.4 0,0 -6.5,-0.9 -3.8,7.9 -7.4,-1.1 3,6.3 0.1,2.4 4.3,13.2 0,0.6 1.2,-0.2 4.5,-5 4.9,-7.2 3,-2.9 -0.1,-4.5 -2.6,-3.2 z" />
       <path id="BJ" data-name="Benin" data-id="BJ" d="m 340,356 -9.3,-8 -4.3,0.1 -4.1,4 -2.6,4.2 -6,1.2 -2.5,6.1 -4.1,1.6 -1.6,7.2 3.7,4.1 4.3,4.9 0.4,6.8 2.5,2.8 -0.5,31.8 3,9.5 10.1,-1.6 0.6,-22.3 -0.3,-8.8 2.3,-8.7 3.7,-4.3 5.9,-8.5 -1.3,-3.7 2.4,-5.6 -2.8,-8.2 0.5,-4.6 z" />
       <path id="BF" data-name="Burkina Faso" data-id="BF" d="m 300.7,310.8 -7.8,0 -3,-2.6 -6.7,1.9 -11.3,5.8 -2.3,4.3 -9.4,6.2 -1.7,3.6 -5.1,2.8 -5.8,-1.9 -3.4,3.4 -1.8,9.5 -9.7,11.4 0.3,4.7 -3.4,5.9 0.8,8 5.5,3 2.1,4.6 5.4,2.9 4.3,-3.4 5.7,-0.6 8.3,3.6 -1.6,-10.4 0.3,-7.9 21.1,-0.6 5.4,1 3.9,-2.2 5.6,1.1 10.7,0.3 4.1,-1.6 2.5,-6.1 6,-1.2 2.6,-4.2 0.3,-9.5 -14,-3.1 -0.4,-6.7 -6.9,-9 -1.6,-6.3 1,-6.7 z" />
@@ -546,7 +547,7 @@ function resetApplicationState() {
 }
 
 // ──────────────────────────────────────────────
-// ARAMA MANTIĞI
+// ARAMA MANTIĞI (DÜZELTİLDİ: TEKİLLEŞTİRME VE TEMİZ GÖRÜNÜM)
 // ──────────────────────────────────────────────
 function setSearchMode(mode) {
     searchMode = mode;
@@ -588,9 +589,9 @@ function runSearch() {
             });
         }
     } else {
-        // GRUP ARAMA (TEKİLLEŞTİRİLMİŞ)
+        // GRUP ARAMA - YENİLENDİ (TEKİLLEŞTİRME VAR, ÜLKE ADI YOK)
         let matches = [];
-        let seenGroups = new Set(); // Daha önce eklenen grup isimlerini takip et
+        let seenGroups = new Set(); // Tekrarlanan grupları engellemek için
 
         Object.keys(countryData).forEach(cid => {
             const c = countryData[cid];
@@ -598,10 +599,11 @@ function runSearch() {
                 c.groups.forEach((g, idx) => {
                     const gName = g.name_tr;
                     if(gName && gName.toLowerCase().includes(term)) {
-                        // Eğer bu grup ismi daha önce listede yoksa ekle
+                        // Eğer bu grup ismi daha önce eklenmediyse listeye ekle
                         if(!seenGroups.has(gName)) {
                             seenGroups.add(gName);
-                            matches.push({ cid, idx, gName: gName, cName: c.name_tr });
+                            // Sadece grup ismini yolluyoruz, ülke ismi artık HTML'de görünmeyecek
+                            matches.push({ cid, idx, gName: gName });
                         }
                     }
                 });
@@ -615,7 +617,6 @@ function runSearch() {
                 <div class="result-item" onclick="goToGroup('${m.cid}', ${m.idx})">
                     <div class="result-info">
                         <div>${m.gName}</div>
-                        <span>(Örn: ${m.cName})</span> 
                     </div>
                     <svg style="width:16px;height:16px;" viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="11" cy="11" r="8"></circle></svg>
                 </div>`;
@@ -626,7 +627,7 @@ function runSearch() {
 }
 
 // ──────────────────────────────────────────────
-// SEÇİM FONKSİYONLARI
+// SEÇİM FONKSİYONLARI (DÜZELTİLDİ: GO TO GROUP HARİTAYI BOYAMAZ)
 // ──────────────────────────────────────────────
 function selectCountry(id, name, pathEl) {
     // Mevcut seçimi temizle
@@ -733,13 +734,40 @@ function goToCountry(id, name) {
     selectCountry(id, name, null);
 }
 
+// ─── ÖNEMLİ DÜZELTME: GRUP SEÇİLİNCE HARİTA KIRMIZI OLMAZ ───
 function goToGroup(cid, idx) {
-    // Sidebar kapat
+    // 1. Sidebar ve arayüz temizliği
     dom.sidebar.classList.remove("active");
     dom.sidebarBackdrop.style.display = "none";
     dom.searchFab.classList.remove("hidden");
-    
-    selectCountry(cid, null, null); 
+
+    // 2. State güncelleme (Hangi ülke verisini kullanacağımızı bilmeliyiz)
+    currentCountryId = cid;
+
+    // 3. EĞER haritada bir yer seçiliyse (kırmızıysa), bunu kaldır.
+    // Arama sonucuna tıkladığında harita temiz kalmalı.
+    if(activePath) {
+        activePath.classList.remove("active");
+        activePath = null;
+    }
+
+    // 4. "Geri" tuşu için Ülke Modalı verilerini arka planda hazırla
+    // (Böylece kullanıcı grup panelinden geri tuşuna basarsa boş ekran görmez)
+    const cData = countryData[cid];
+    if(cData) {
+        dom.countryTitle.textContent = cData.name_tr;
+        let html = "";
+        if(cData.groups && cData.groups.length > 0) {
+            cData.groups.forEach((g, i) => {
+                html += `<div class="group-item" onclick="openGroupDetail(${i})">${g.name_tr}</div>`;
+            });
+        } else {
+            html = "<p style='text-align:center;color:#666;padding:20px;'>Grup kaydı yok.</p>";
+        }
+        dom.countryGroups.innerHTML = html;
+    }
+
+    // 5. Direkt olarak Grup Detayını aç
     openGroupDetail(idx);
 }
 
