--- a/index.html
+++ b/index.html
@@ -352,15 +352,15 @@
       </div>
       <div class="modal-body">
         <div class="long-tabs">
-            <div class="l-tab active" onclick="showLongTabContent('olusum')">Oluşum</div>
-            <div class="l-tab" onclick="showLongTabContent('amac')">Amaç</div>
-            <div class="l-tab" onclick="showLongTabContent('yonetim')">Yönetim</div>
+            <div class="l-tab active" onclick="showLongTabContent('olusum')">Oluşumu ve Gelişimi</div>
+            <div class="l-tab" onclick="showLongTabContent('amac')">Amaç ve Nihai Hedef</div>
+            <div class="l-tab" onclick="showLongTabContent('yonetim')">Yönetim ve Yapılanma</div>
             <div class="l-tab" onclick="showLongTabContent('metot')">Metot</div>
-            <div class="l-tab" onclick="showLongTabContent('eylem')">Eylemler</div>
-            <div class="l-tab" onclick="showLongTabContent('finans')">Finans</div>
-            <div class="l-tab" onclick="showLongTabContent('iliski')">İlişkiler</div>
-            <div class="l-tab" onclick="showLongTabContent('diger')">Diğer</div>
-            <div class="l-tab" onclick="showLongTabContent('kaynak')">Kaynak</div>
+            <div class="l-tab" onclick="showLongTabContent('eylem')">Kullandıkları Eylem Taktikleri</div>
+            <div class="l-tab" onclick="showLongTabContent('finans')">Kaynak Temini</div>
+            <div class="l-tab" onclick="showLongTabContent('iliski')">Diğer Gruplarla İlişkiler</div>
+            <div class="l-tab" onclick="showLongTabContent('diger')">Diğer Bilgiler</div>
+            <div class="l-tab" onclick="showLongTabContent('kaynak')">Kaynakça</div>
         </div>
         <div id="long-detail-body" class="detail-body">
            <p style="text-align:center; color:#888;">Lütfen bir kategori seçin.</p>
